--- a/samples/client/petstore/kotlin-jvm-spring-3-webclient/build.gradle
+++ b/samples/client/petstore/kotlin-jvm-spring-3-webclient/build.gradle
@@ -30,6 +30,13 @@ test {
     useJUnitPlatform()
 }
 
+
+kotlin {
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
