--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,12 +3,16 @@ name: Docker tests
 on:
   push:
     paths:
-      - 'Dockerfile'
-      - 'run-in-docker.sh'
+      - Dockerfile
+      - run-in-docker.sh
+      - pom.xml
+      - modules/openapi-generator-online/pom.xml
   pull_request:
     paths:
-      - 'Dockerfile'
-      - 'run-in-docker.sh'
+      - Dockerfile
+      - run-in-docker.sh
+      - pom.xml
+      - modules/openapi-generator-online/pom.xml
 
 jobs:
   build:
@@ -21,3 +25,11 @@ jobs:
       - name: Test run-in-docker.sh
         shell: bash
         run: ./run-in-docker.sh mvn clean install
+
+      - name: Build Dockerfile
+        shell: bash
+        run: docker build .
+
+      - name: Build modules/openapi-generator-online/Dockerfile
+        shell: bash
+        run: docker build modules/openapi-generator-online/Dockerfile
