--- a/samples/server/petstore/go-gin-api-server/Dockerfile
+++ b/samples/server/petstore/go-gin-api-server/Dockerfile
@@ -2,13 +2,12 @@ FROM golang:1.19 AS build
 WORKDIR /go/src
 COPY go ./go
 COPY main.go .
-COPY go.mod .
 COPY go.sum .
+COPY go.mod .
 
 ENV CGO_ENABLED=0
-RUN go install
 
-RUN go build -a -installsuffix cgo -o petstoreserver .
+RUN go build -o petstoreserver .
 
 FROM scratch AS runtime
 ENV GIN_MODE=release
