--- a/bin/configs/swift-combine-petstore-new.yaml
+++ b/bin/configs/swift-combine-petstore-new.yaml
@@ -1,7 +1,7 @@
-generatorName: swift-alt
-outputDir: samples/client/petstore/swift-alt/client
+generatorName: swift-combine
+outputDir: samples/client/petstore/swift-combine/client
 inputSpec: modules/openapi-generator/src/test/resources/3_0/petstore.yaml
-templateDir: modules/openapi-generator/src/main/resources/swift-alt
+templateDir: modules/openapi-generator/src/main/resources/swift-combine
 additionalProperties:
   hideGenerationTimestamp: "true"
   projectName: "PetstoreOpenAPI"
