--- a/samples/server/petstore/rust-server/output/petstore-with-fake-endpoints-models-for-testing/Cargo.toml
+++ b/samples/server/petstore/rust-server/output/petstore-with-fake-endpoints-models-for-testing/Cargo.toml
@@ -41,7 +41,7 @@ mime = "0.3"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-garde = "0.11.2"
+validator = { version = "0.16", features = ["derive"] }
 
 # Crates included if required by the API definition
 # TODO: this should be updated to point at the official crate once
