--- a/samples/openapi3/client/petstore/dart-next/dio/built_value/pom.xml
+++ b/samples/openapi3/client/petstore/dart-next/dio/built_value/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openapitools</groupId>
-    <artifactId>DartDioBuiltValueTests</artifactId>
+    <artifactId>DartNextDioBuiltValueTests</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <name>DartDio Petstore Client Lib Fake</name>
