--- a/.github/workflows/samples-dotnet.yaml
+++ b/.github/workflows/samples-dotnet.yaml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'samples/client/petstore/csharp-netcore/**net6.0**/'
       - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore**/'
+      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests'
       - 'samples/server/petstore/aspnetcore-6.0/**'
       - 'samples/server/petstore/aspnetcore-6.0-pocoModels/**'
       - 'samples/server/petstore/aspnetcore-6.0-useSwashBuckle/**'
@@ -13,6 +14,7 @@ on:
     paths:
       - 'samples/client/petstore/csharp-netcore/**net6.0**/'
       - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore**/'
+      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests'
       - 'samples/server/petstore/aspnetcore-6.0/**'
       - 'samples/server/petstore/aspnetcore-6.0-pocoModels/**'
       - 'samples/server/petstore/aspnetcore-6.0-project4Models/**'
@@ -33,6 +35,7 @@ jobs:
           - samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore-latest-allOf
           - samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore-latest-oneOf
           - samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore-latest-anyOf
+          - samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests
           - samples/server/petstore/aspnetcore-6.0
           - samples/server/petstore/aspnetcore-6.0-pocoModels
           - samples/server/petstore/aspnetcore-6.0-project4Models
