--- a/.github/workflows/samples-dotnet.yaml
+++ b/.github/workflows/samples-dotnet.yaml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'samples/client/petstore/csharp-netcore/**net6.0**/'
       - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore**/'
-      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests'
+      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests/**'
       - 'samples/server/petstore/aspnetcore-6.0/**'
       - 'samples/server/petstore/aspnetcore-6.0-pocoModels/**'
       - 'samples/server/petstore/aspnetcore-6.0-useSwashBuckle/**'
@@ -14,7 +14,7 @@ on:
     paths:
       - 'samples/client/petstore/csharp-netcore/**net6.0**/'
       - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-netcore**/'
-      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests'
+      - 'samples/client/petstore/csharp-netcore/OpenAPIClient-generichost-manual-tests/**'
       - 'samples/server/petstore/aspnetcore-6.0/**'
       - 'samples/server/petstore/aspnetcore-6.0-pocoModels/**'
       - 'samples/server/petstore/aspnetcore-6.0-project4Models/**'
