--- a/.github/workflows/samples-scala.yaml
+++ b/.github/workflows/samples-scala.yaml
@@ -29,6 +29,7 @@ jobs:
           - samples/server/petstore/scala-akka-http-server
           - samples/server/petstore/scalatra
           - samples/server/petstore/scala-finch # cannot be tested with jdk11
+          - samples/client/petstore/scala/sttp4
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
