--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,13 +7,14 @@ on:
       - run-in-docker.sh
       - pom.xml
       - modules/openapi-generator-online/pom.xml
+      - modules/openapi-generator-online/Dockerfile
   pull_request:
     paths:
       - Dockerfile
       - run-in-docker.sh
       - pom.xml
       - modules/openapi-generator-online/pom.xml
-
+      - modules/openapi-generator-online/Dockerfile
 jobs:
   build:
     name: 'Build: Docker'
