--- a/bin/configs/spring-cloud-3-with-optional.yaml
+++ b/bin/configs/spring-cloud-3-with-optional.yaml
@@ -10,4 +10,5 @@ additionalProperties:
   dateLibrary: "java8"
   useOptional: "true"
   useSwaggerUI: "false"
+  hideGenerationTimestamp: "true"
   documentationProvider: none
