--- a/samples/client/echo_api/dart/dio/json_serializable/pom.xml
+++ b/samples/client/echo_api/dart/dio/json_serializable/pom.xml
@@ -1,10 +1,10 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openapitools</groupId>
-    <artifactId>DartNextDioJsonSerializableTests</artifactId>
+    <artifactId>DartNextDioJsonSerializableSample</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>DartDio Petstore Client Lib Fake Json Serializable</name>
+    <name>Dart Echo API Sample (dio/json_serializable)</name>
     <build>
         <plugins>
             <plugin>
@@ -24,7 +24,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
                 <executions>
                     <execution>
                         <id>pub-get</id>
@@ -33,8 +32,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>pub</executable>
+                            <executable>dart</executable>
                             <arguments>
+                                <argument>pub</argument>
                                 <argument>get</argument>
                             </arguments>
                         </configuration>
@@ -46,8 +46,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>pub</executable>
+                            <executable>dart</executable>
                             <arguments>
+                                <argument>pub</argument>
                                 <argument>run</argument>
                                 <argument>build_runner</argument>
                                 <argument>build</argument>
