--- a/samples/openapi3/client/petstore/dart-dio/oneof_primitive/pom.xml
+++ b/samples/openapi3/client/petstore/dart-dio/oneof_primitive/pom.xml
@@ -24,7 +24,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
                 <executions>
                     <execution>
                         <id>pub-get</id>
@@ -33,8 +32,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>pub</executable>
+                            <executable>dart</executable>
                             <arguments>
+                                <argument>pub</argument>
                                 <argument>get</argument>
                             </arguments>
                         </configuration>
@@ -46,8 +46,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>pub</executable>
+                            <executable>dart</executable>
                             <arguments>
+                                <argument>pub</argument>
                                 <argument>run</argument>
                                 <argument>build_runner</argument>
                                 <argument>build</argument>
