--- a/.github/workflows/samples-spring.yaml
+++ b/.github/workflows/samples-spring.yaml
@@ -26,7 +26,8 @@ jobs:
           - samples/openapi3/client/petstore/spring-stubs-skip-default-interface
           - samples/openapi3/client/petstore/spring-cloud-async
           - samples/openapi3/client/petstore/spring-cloud-spring-pageable
-          - samples/openapi3/client/petstore/spring-cloud-3-with-optional.yaml
+          - samples/openapi3/client/petstore/spring-cloud-3-with-optional
+          - samples/openapi3/client/petstore/spring-cloud-tags
           # servers
           - samples/server/petstore/springboot
           - samples/openapi3/server/petstore/springboot
@@ -47,7 +48,6 @@ jobs:
           - samples/server/petstore/springboot-spring-pageable-delegatePattern
           - samples/server/petstore/springboot-spring-pageable-without-j8
           - samples/server/petstore/springboot-spring-pageable
-          - samples/openapi3/client/petstore/spring-cloud-tags.yaml
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
